fixed the issue with mobile horizontal spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,7 +58,6 @@ footer {
     text-align: center;
     position: relative;
     bottom: 0;
-    width: 100%;
 }
 
 ul {
